Added debug logs in Roster Generation Service